--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 !LICENSE
 !Makefile
 !generator/
+!bin/templates/template.ecr
 
 # double ignore others
 *.swp
-bin/templates/template.ecr
 .crystal/
 .DS_Store
 bin/configlet
