Add reistor color trio

--- a/config.json
+++ b/config.json
@@ -409,6 +409,19 @@
         ]
       },
       {
+        "slug": "resistor-color-trio",
+        "name": "Resistor Color Trio",
+        "uuid": "c6b6a4eb-a85e-44fb-8d3d-c706a301e768",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": [
+          "arrays",
+          "numbers",
+          "strings"
+        ]
+      },
+      {
         "slug": "isbn-verifier",
         "name": "ISBN Verifier",
         "uuid": "0b6c8c53-04ae-4969-8bc0-1f1205df3420",
