--- a/exercises/practice/word-count/.meta/config.json
+++ b/exercises/practice/word-count/.meta/config.json
@@ -1,5 +1,8 @@
 {
-  "authors": [],
+  "authors": ["meatball133"],
+  "contributors": [
+    "ErikSchierboom"
+  ],
   "files": {
     "solution": [
       "src/word_count.cr"
