--- a/config.json
+++ b/config.json
@@ -19,18 +19,10 @@
     "average_run_time": 6.0
   },
   "files": {
-    "solution": [
-      "src/%{snake_slug}.cr"
-    ],
-    "test": [
-      "spec/%{snake_slug}_spec.cr"
-    ],
-    "example": [
-      "src/example.cr"
-    ],
-    "exemplar": [
-      ".meta/exemplar/.cr"
-    ]
+    "solution": ["src/%{snake_slug}.cr"],
+    "test": ["spec/%{snake_slug}_spec.cr"],
+    "example": ["src/example.cr"],
+    "exemplar": [".meta/exemplar/.cr"]
   },
   "exercises": {
     "concept": [],
@@ -60,11 +52,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "loops",
-          "math"
-        ]
+        "topics": ["algorithms", "loops", "math"]
       },
       {
         "slug": "atbash-cipher",
@@ -82,9 +70,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "binary-search-tree",
@@ -93,12 +79,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "data_structures",
-          "recursion",
-          "trees"
-        ]
+        "topics": ["algorithms", "data_structures", "recursion", "trees"]
       },
       {
         "slug": "bob",
@@ -125,10 +106,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "loops",
-          "math"
-        ]
+        "topics": ["loops", "math"]
       },
       {
         "slug": "difference-of-squares",
@@ -137,9 +115,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "etl",
@@ -148,11 +124,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "loops",
-          "maps",
-          "transforming"
-        ]
+        "topics": ["loops", "maps", "transforming"]
       },
       {
         "slug": "flatten-array",
@@ -197,13 +169,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "algorithms",
-          "conditionals",
-          "loops",
-          "maps",
-          "strings"
-        ]
+        "topics": ["algorithms", "conditionals", "loops", "maps", "strings"]
       },
       {
         "slug": "largest-series-product",
@@ -212,9 +178,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "leap",
@@ -250,9 +214,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "raindrops",
@@ -270,10 +232,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "arrays",
-          "strings"
-        ]
+        "topics": ["arrays", "strings"]
       },
       {
         "slug": "resistor-color-duo",
@@ -282,10 +241,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "arrays",
-          "strings"
-        ]
+        "topics": ["arrays", "strings"]
       },
       {
         "slug": "reverse-string",
@@ -294,9 +250,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "strings"
-        ]
+        "topics": ["strings"]
       },
       {
         "slug": "rotational-cipher",
@@ -305,9 +259,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "strings"
-        ]
+        "topics": ["strings"]
       },
       {
         "slug": "rna-transcription",
@@ -343,12 +295,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "games",
-          "loops",
-          "maps",
-          "strings"
-        ]
+        "topics": ["games", "loops", "maps", "strings"]
       },
       {
         "slug": "sieve",
@@ -357,9 +304,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "math"
-        ]
+        "topics": ["math"]
       },
       {
         "slug": "space-age",
@@ -368,11 +313,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "conditionals",
-          "floating_point_numbers",
-          "integers"
-        ]
+        "topics": ["conditionals", "floating_point_numbers", "integers"]
       },
       {
         "slug": "triangle",
@@ -390,11 +331,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 1,
-        "topics": [
-          "conditionals",
-          "optional_values",
-          "text_formatting"
-        ]
+        "topics": ["conditionals", "optional_values", "text_formatting"]
       },
       {
         "slug": "darts",
@@ -403,10 +340,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "conditionals",
-          "math"
-        ]
+        "topics": ["conditionals", "math"]
       },
       {
         "slug": "resistor-color-trio",
@@ -415,11 +349,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "arrays",
-          "numbers",
-          "strings"
-        ]
+        "topics": ["arrays", "numbers", "strings"]
       },
       {
         "slug": "isbn-verifier",
@@ -428,10 +358,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "arrays",
-          "strings"
-        ]
+        "topics": ["arrays", "strings"]
       },
       {
         "slug": "luhn",
@@ -440,11 +367,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "algorithms",
-          "integers",
-          "strings"
-        ]
+        "topics": ["algorithms", "integers", "strings"]
       },
       {
         "slug": "strain",
@@ -453,11 +376,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "arrays",
-          "filtering",
-          "loops"
-        ]
+        "topics": ["arrays", "filtering", "loops"]
       },
       {
         "slug": "binary-search",
@@ -466,11 +385,16 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "numbers",
-          "arrays",
-          "loops"
-        ]
+        "topics": ["numbers", "arrays", "loops"]
+      },
+      {
+        "slug": "nucleotide-count",
+        "name": "Nucleotide Count",
+        "uuid": "42296e84-233a-4251-9910-bf1fb9a1563c",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2,
+        "topics": ["numbers", "Hashmaps", "loops"]
       },
       {
         "slug": "high-scores",
@@ -479,10 +403,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
-        "topics": [
-          "arrays",
-          "classes"
-        ]
+        "topics": ["arrays", "classes"]
       },
       {
         "slug": "all-your-base",
@@ -491,11 +412,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "integers",
-          "math",
-          "transforming"
-        ]
+        "topics": ["integers", "math", "transforming"]
       },
       {
         "slug": "forth",
@@ -513,12 +430,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "dates",
-          "time",
-          "transforming",
-          "type_conversion"
-        ]
+        "topics": ["dates", "time", "transforming", "type_conversion"]
       },
       {
         "slug": "nth-prime",
@@ -527,11 +439,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "algorithms",
-          "integers",
-          "math"
-        ]
+        "topics": ["algorithms", "integers", "math"]
       },
       {
         "slug": "prime-factors",
@@ -540,11 +448,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "algorithms",
-          "integers",
-          "math"
-        ]
+        "topics": ["algorithms", "integers", "math"]
       },
       {
         "slug": "protein-translation",
@@ -553,11 +457,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "filtering",
-          "maps",
-          "sequences"
-        ]
+        "topics": ["filtering", "maps", "sequences"]
       },
       {
         "slug": "series",
@@ -566,11 +466,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "arrays",
-          "enumerable",
-          "loops"
-        ]
+        "topics": ["arrays", "enumerable", "loops"]
       },
       {
         "slug": "word-count",
@@ -579,11 +475,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
-        "topics": [
-          "Hashmaps",
-          "strings",
-          "loops"
-        ]
+        "topics": ["Hashmaps", "strings", "loops"]
       },
       {
         "slug": "allergies",
@@ -592,10 +484,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "bitwise_operations",
-          "enumeration"
-        ]
+        "topics": ["bitwise_operations", "enumeration"]
       },
       {
         "slug": "grains",
@@ -604,10 +493,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "integers",
-          "math"
-        ]
+        "topics": ["integers", "math"]
       },
       {
         "slug": "perfect-numbers",
@@ -616,12 +502,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "algorithms",
-          "filtering",
-          "integers",
-          "math"
-        ]
+        "topics": ["algorithms", "filtering", "integers", "math"]
       },
       {
         "slug": "proverb",
@@ -630,11 +511,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
-        "topics": [
-          "arrays",
-          "loops",
-          "strings"
-        ]
+        "topics": ["arrays", "loops", "strings"]
       },
       {
         "slug": "secret-handshake",
@@ -643,11 +520,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5,
-        "topics": [
-          "arrays",
-          "bitwise_operations",
-          "integers"
-        ]
+        "topics": ["arrays", "bitwise_operations", "integers"]
       },
       {
         "slug": "sum-of-multiples",
@@ -656,11 +529,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5,
-        "topics": [
-          "integers",
-          "loops",
-          "math"
-        ]
+        "topics": ["integers", "loops", "math"]
       },
       {
         "slug": "react",
