Added robot simlulator

--- a/config.json
+++ b/config.json
@@ -478,6 +478,15 @@
         "topics": ["Hashmaps", "strings", "loops"]
       },
       {
+        "slug": "robot-simulator",
+        "name": "Robot Simulator",
+        "uuid": "1fd5c0db-dbfd-4956-bcb8-d874bff26258",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 4,
+        "topics": ["strings", "classes"]
+      },
+      {
         "slug": "allergies",
         "name": "Allergies",
         "uuid": "6c07e00f-78f0-4878-9222-d9e3ed86fd0b",
