--- a/concepts/basics/.meta/config.json
+++ b/concepts/basics/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Python is a dynamic and strongly typed object-oriented programming language in which variables can be bound and re-bound to any data type. It employs both duck typing and gradual typing (via type hints). Python uses significant indentation to denote code blocks and puts strong emphasis on code readability.",
+  "blurb": "Crystal is a static, strongly typed, object-oriented programming language with a focus on performance, type safety, and developer productivity",
   "authors": ["meatball133"],
   "contributors": []
 }
