--- a/exercises/concept-wip/arys-amazing-lasagna/.meta/config.json
+++ b/exercises/concept-wip/arys-amazing-lasagna/.meta/config.json
@@ -1,8 +1,8 @@
 {
   "authors": ["meatball133"],
   "files": {
-    "solution": ["src/lasagna.cr"],
-    "test": ["spec/lasagna_spec.cr"],
+    "solution": ["src/arys_amazing_lasagna.cr"],
+    "test": ["spec/arys_amazing_lasagna_spec.cr"],
     "example": [".meta/src/example.cr"]
   },
   "forked_from": ["ruby/lasagna"],
