--- a/config.json
+++ b/config.json
@@ -489,7 +489,7 @@
       {
         "slug": "palindrome-products",
         "name": "Palindrome Products",
-        "uuid": "905fc8f6-625f-402e-8c2b-ba7eab43236cs",
+        "uuid": "80f4bfda-24a7-41b7-b58e-7b93ccb5e543",
         "practices": [],
         "prerequisites": [],
         "difficulty": 4,
