--- a/exercises/concept/crystal-hunter/.meta/config.json
+++ b/exercises/concept/crystal-hunter/.meta/config.json
@@ -8,5 +8,5 @@
   },
   "forked_from": ["elixir/pacman-rules"],
   "icon": "low-power-embedded-game",
-  "blurb": "Learn about booleans by implementing the rules of the Pac-Man game."
+  "blurb": "Learn about booleans by implementing the rules of the game, Crystal Hunter."
 }
