--- a/concepts-wip/bools/.meta/config.json
+++ b/concepts-wip/bools/.meta/config.json
@@ -1,5 +1,5 @@
 {
-  "blurb": "Crystal has a Bool type to represent true and false and a bool can only be true or false. The bool type support AND, OR, and NOT operators",
+  "blurb": "Crystal has a Bool type to represent true and false and a Bool can only be true or false. The Bool type support AND, OR, and NOT operators",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["andrerfcsantos", "angelikatyborska"]
 }
