--- a/exercises/concept-wip/arys-amazing-lasagna/.meta/config.json
+++ b/exercises/concept-wip/arys-amazing-lasagna/.meta/config.json
@@ -4,7 +4,7 @@
   "files": {
     "solution": ["src/arys_amazing_lasagna.cr"],
     "test": ["spec/arys_amazing_lasagna_spec.cr"],
-    "example": [".meta/src/exemplar.cr"]
+    "exemplar": [".meta/src/exemplar.cr"]
   },
   "forked_from": ["ruby/lasagna"],
   "blurb": "Learn about the basics of Crystal by following a lasagna recipe.",
