--- a/exercises/concept-wip/navigation-computer/.meta/config.json
+++ b/exercises/concept-wip/navigation-computer/.meta/config.json
@@ -1,11 +1,11 @@
 {
-    "authors": ["meatball133"],
-    "contributors": [],
-    "files": {
-      "solution": ["src/navigation_computer.cr"],
-      "test": ["spec/navigation_computer_spec.cr"],
-      "exemplar": [".meta/src/exemplar.cr"]
-    },
-    "icon": "land-grab-in-space",
-    "blurb": "Learn about numbers by update Wellington's weather station temperature system"
-  }
+  "authors": ["meatball133"],
+  "contributors": [],
+  "files": {
+    "solution": ["src/navigation_computer.cr"],
+    "test": ["spec/navigation_computer_spec.cr"],
+    "exemplar": [".meta/src/exemplar.cr"]
+  },
+  "icon": "land-grab-in-space",
+  "blurb": "Learn about number types while building a navigation system for ESA (Exericsm Space Agency)."
+}
