--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,8 @@ jobs:
   template:
     name: Check file formatting
     runs-on: ubuntu-22.04
+    container:
+      image: crystallang/crystal
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
