--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,7 @@ jobs:
   template:
     name: Check file formatting
     runs-on: ubuntu-22.04
+    options: --privileged
     container:
       image: crystallang/crystal
     steps:
