--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,7 +32,7 @@ jobs:
     name: Check file formatting
     runs-on: ubuntu-18.04
     container:
-      image: crystallang/crystal
+      image: jenkins/jenkins:lts-jdk17
       options: --privileged
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
