--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run tests
-        run: make test-exercises
+        run: crystal ./bin/test-runner.cr
   generator:
     name: Check Generator Templates
     runs-on: ubuntu-22.04
