--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,15 +9,15 @@ on:
     - cron: '0 0 * * 0'
 
 jobs:
-  exercises:
-    name: Check exercises
+  old_exercises:
+    name: Check exercises old
     runs-on: ubuntu-22.04
     # idea from https://github.com/actions/starter-workflows/blob/master/ci/crystal.yml
     container:
       image: crystallang/crystal
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Run tests
+      - name: Run tests old
         run: make test-exercises
   generator:
     name: Check Generator Templates
@@ -37,3 +37,13 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
+  exercises:
+    name: Check exercises
+    runs-on: ubuntu-22.04
+    # idea from https://github.com/actions/starter-workflows/blob/master/ci/crystal.yml
+    container:
+      image: crystallang/crystal
+    steps:
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+      - name: Run tests
+        run: ./bin/test-exercises.sh
