--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,6 +45,7 @@ jobs:
       image: crystallang/crystal
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
       - name: Run tests
-      - run: apk add jq
         run: ./bin/test-exercises.sh
