--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,6 @@ jobs:
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Install jq
-        run: apt-get update && sudo apt-get install -y jq
+        run: apt-get update && apt-get install -y jq
       - name: Run tests
         run: ./bin/test-exercises.sh
