--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,22 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
-  exercises:
+  exercises:1.6:
     name: Check exercises
     runs-on: ubuntu-22.04
-    # idea from https://github.com/actions/starter-workflows/blob/master/ci/crystal.yml
     container:
-      image: crystallang/crystal
+      image: crystallang/crystal:1.6.2-alpine
+    steps:
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+      - name: Install jq
+        run: apt-get update && apt-get install -y jq
+      - name: Run tests
+        run: ./bin/test-exercises.sh
+  exercises:1.7:
+    name: Check exercises
+    runs-on: ubuntu-22.04
+    container:
+      image: crystallang/crystal:1.7.2-alpine
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Install jq
