--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
-  exercises:1.6:
+  exercises_1.6:
     name: Check exercises
     runs-on: ubuntu-22.04
     container:
@@ -38,7 +38,7 @@ jobs:
         run: apt-get update && apt-get install -y jq
       - name: Run tests
         run: ./bin/test-exercises.sh
-  exercises:1.7:
+  exercises_1.7:
     name: Check exercises
     runs-on: ubuntu-22.04
     container:
