--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,10 +28,10 @@ jobs:
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
   exercises_1-6:
-    name: Check exercises
+    name: Check exercises crystal 1.6
     runs-on: ubuntu-22.04
     container:
-      image: crystallang/crystal:1.6.2-alpine
+      image: crystallang/crystal:1.6
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Install jq
@@ -39,10 +39,10 @@ jobs:
       - name: Run tests
         run: ./bin/test-exercises.sh
   exercises_1-7:
-    name: Check exercises
+    name: Check exercises crystal 1.7
     runs-on: ubuntu-22.04
     container:
-      image: crystallang/crystal:1.7.2-alpine
+      image: crystallang/crystal:1.7
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Install jq
