--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,17 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
+  exercises_1-2:
+    name: Check exercises crystal 1.2
+    runs-on: ubuntu-22.04
+    container:
+      image: crystallang/crystal:1.2
+    steps:
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+      - name: Install jq
+        run: apt-get update && apt-get install -y jq
+      - name: Run tests
+        run: ./bin/test-exercises.sh
   exercises_1-6:
     name: Check exercises crystal 1.6
     runs-on: ubuntu-22.04
