--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,33 +27,15 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Run file formatting
         run: crystal ./bin/check-format.cr
-  exercises_1-2:
-    name: Check exercises crystal 1.2
+  exercises:
+    name: Check exercises crystal ${{ matrix.crystal }}
     runs-on: ubuntu-22.04
+    strategy:
+      # Allows running the job multiple times with different configurations
+      matrix:
+        crystal: [1.2, 1.6, 1.7]
     container:
-      image: crystallang/crystal:1.2.2
-    steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Install jq
-        run: apt-get update && apt-get install -y jq
-      - name: Run tests
-        run: ./bin/test-exercises.sh
-  exercises_1-6:
-    name: Check exercises crystal 1.6
-    runs-on: ubuntu-22.04
-    container:
-      image: crystallang/crystal:1.6
-    steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-      - name: Install jq
-        run: apt-get update && apt-get install -y jq
-      - name: Run tests
-        run: ./bin/test-exercises.sh
-  exercises_1-7:
-    name: Check exercises crystal 1.7
-    runs-on: ubuntu-22.04
-    container:
-      image: crystallang/crystal:1.7
+      image: crystallang/crystal:${{ matrix.crystal }}
     steps:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
       - name: Install jq
