--- a/concept-wip/numbers/.meta/config.json
+++ b/concept-wip/numbers/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Crystal has a Number type, there are 2 main number types, Int and Float. Crystal has arithmetic operators to be able to do mathematical operations",
   "authors": ["meatball133"],
-  "contributors": ["ryanplusplus"]
+  "contributors": ["ryanplusplus", "gleenj"]
 }
