Added a bunch of files and added more exercises

--- a/exercises/concept-wip/johannes-juice-maker/.meta/config.json
+++ b/exercises/concept-wip/johannes-juice-maker/.meta/config.json
@@ -7,5 +7,5 @@
     "exemplar": [".meta/src/exemplar.cr"]
   },
   "icon": "mixed-juices",
-  "blurb": "To Do"
+  "blurb": "Help Johannes with their juice maker while learning about classes"
 }
