--- a/concepts-wip/strings/.meta/config.json
+++ b/concepts-wip/strings/.meta/config.json
@@ -1,5 +1,5 @@
 {
-    "blurb": "To Do",
-    "authors": ["meatball133"],
-    "contributors": []
-  }
+  "blurb": "Crystal has a string type, string holds a sequence of characters. To create a string, use double quotes (\").",
+  "authors": ["meatball133"],
+  "contributors": []
+}
