--- a/exercises/concepts-wip/party-robot/.meta/config.json
+++ b/exercises/concepts-wip/party-robot/.meta/config.json
@@ -6,6 +6,7 @@
     "test": ["spec/party_robot_spec.cr"],
     "exemplar": [".meta/src/exemplar.cr"]
   },
+  "forked_from": ["go/party-robot"],
   "icon": "party-robot",
   "blurb": "Learn about strings by programming a party robot."
 }
