--- a/exercises/concept/crystal-hunter/.meta/config.json
+++ b/exercises/concept/crystal-hunter/.meta/config.json
@@ -3,7 +3,7 @@
   "contributors": [
     "andrerfcsantos",
     "angelikatyborska",
-    "glennj",
+    "gleenj",
     "ryanplusplus"
   ],
   "files": {
