AAdded while loops

--- a/config.json
+++ b/config.json
@@ -41,6 +41,14 @@
         "concepts": ["bools"],
         "prerequisites": ["basics"],
         "status": "wip"
+      },
+      {
+        "slug": "interest-is-interesting",
+        "name": "Interest is Interesting",
+        "uuid": "142d81e4-6572-4567-841d-e59439945dd9",
+        "concepts": ["while-loops"],
+        "prerequisites": ["conditionals"],
+        "status": "wip"
       }
     ],
     "practice": [
@@ -665,6 +673,11 @@
       "uuid": "403dd39d-22ba-45b9-a80a-be0b94291ea1",
       "slug": "bools",
       "name": "Bools"
+    },
+    {
+      "uuid": "e0f1bb58-def6-4195-a0f2-661ba351858f",
+      "slug": "while-loops",
+      "name": "While Loops"
     }
   ],
   "key_features": [
