Updated based on feedback

--- a/exercises/concept/navigation-computer/.meta/config.json
+++ b/exercises/concept/navigation-computer/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["ihid"],
   "files": {
     "solution": ["src/navigation_computer.cr"],
     "test": ["spec/navigation_computer_spec.cr"],
