--- a/concepts/conditionals/.meta/config.json
+++ b/concepts/conditionals/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Crystal has conditionals to control the flow of your program. You can use if, unless to control the flow of your program.",
   "authors": ["meatball133"],
-  "contributors": []
+  "contributors": ["glennj"]
 }
