--- a/exercises/concept/meltdown-mitigation/.meta/config.json
+++ b/exercises/concept/meltdown-mitigation/.meta/config.json
@@ -1,6 +1,6 @@
 {
   "authors": ["meatball133"],
-  "contributors": [],
+  "contributors": ["glennj"],
   "files": {
     "solution": ["src/conditionals.cr"],
     "test": ["spec/conditionals_spec.cr"],
