--- a/concepts/while-loops/.meta/config.json
+++ b/concepts/while-loops/.meta/config.json
@@ -1,5 +1,5 @@
 {
   "blurb": "Crystal has while loops, they are used to repeat a block of code until a condition is met.",
-  "authors": ["meatball133"],
+  "authors": ["meatball133", "glennj"],
   "contributors": ["marksiemers"]
 }
